--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -150,7 +150,7 @@ h6 {
 */
 .get-started-btn {
   margin-left: 22px;
-  background: #5fcf80;
+  background: #5928e5;
   color: #fff;
   border-radius: 50px;
   padding: 8px 25px;
@@ -160,7 +160,9 @@ h6 {
   display: inline-block;
 }
 .get-started-btn:hover {
-  background: #3ac162;
+  background: #66ff00;
+  /* #3ee528; */
+  /* #3ac162; */
   color: #fff;
 }
 @media (max-width: 768px) {
@@ -422,8 +424,8 @@ h6 {
   color: #fff;
 }
 #hero .btn-get-started:hover {
-  background: #5fcf80;
-  border: 2px solid #5fcf80;
+  background: #66ff00;
+  border: 2px solid #66ff00;
 }
 @media (min-width: 1024px) {
   #hero {
@@ -575,7 +577,8 @@ section {
 --------------------------------------------------------------*/
 .why-us .content {
   padding: 30px;
-  background: #5fcf80;
+  background: #66ff00;
+  /* #5fcf80; */
   border-radius: 4px;
   color: #fff;
 }
@@ -690,7 +693,7 @@ section {
 }
 .courses .course-content h4 {
   font-size: 14px;
-  background: #5fcf80;
+  background: #66ff00;
   padding: 7px 14px;
   color: #fff;
   margin: 0;
