make files for every components

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1122,6 +1122,9 @@ section {
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
+.contact {
+  margin-top: 94px;
+}
 
 .contact .info {
   width: 100%;
