--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,3 +1,8 @@
-.copyright {
-  align-items: center !important;
+.footer {
+  background-color: rgb(239, 236, 236);
+}
+
+.container strong {
+  display: inline-block;
+  margin: 0 auto;
 }
